--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="チームで画像挿入" alt="Presented by チーム名"></h1>
+    <h1 class="main-title"><img src="チームで画像挿入" alt="Presented by メシア"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
@@ -83,4 +83,5 @@
     </div>
   </footer>
 </body>
+
 </html>
