--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">まさかの警報発令？こんなに晴れているのに？？？<br>
+          <p class="text-center">まさかのまさかの警報発令？こんなに晴れているのに？？？<br>
             したかなく、オンライン授業を受けようと自宅からSlackチャンネルにあるメンターが投げているURLをクリックしたあなた。<br>
             しかし、今日は何かが違う。<br>
             <br>
@@ -85,3 +85,4 @@
 </body>
 
 </html>
+
