--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="チームで画像挿入" alt="Presented by メシア"></h1>
+    <h1 class="main-title"><img src="チームで画像挿入" alt="Presented by かき氷"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
@@ -85,4 +85,5 @@
 </body>
 
 </html>
+
 
