--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>カウンターに辿り着く。</h2>
             <p class="text-center">＊＊＊＊＊＊＊＊＊<br>
               ＊＊＊＊＊＊＊＊＊</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
@@ -262,4 +262,5 @@ STAGE3-3追加　ここまで -->
   <script src="https://unpkg.com/vue@next"></script>
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
