--- a/main.html
+++ b/main.html
@@ -16,8 +16,9 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>カウンターに辿り着く。</h2>
-            <p class="text-center">＊＊＊＊＊＊＊＊＊<br>
-              ＊＊＊＊＊＊＊＊＊</p>
+            <p class="text-center">カウンターの上には、いくつかのカルテと電源の入ったパソコンがある。<br>
+              パソコンには「パスワードを入力せよ、答えはカルテの中に」とかいてあった。<br>
+            </p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -264,3 +265,4 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
