--- a/main.html
+++ b/main.html
@@ -19,7 +19,11 @@
             <p class="text-center">カウンターの上には、いくつかのカルテと電源の入ったパソコンがある。<br>
               パソコンには「パスワードを入力せよ、答えはカルテの中に」とかいてあった。<br>
             </p>
-            <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
+            <p class="text-center">カルテは全部で6人分。それぞれの病名の下に赤いマーカーがひいてあった。<br>
+            Meningitis(髄膜炎)、Encephalitis(脳炎)、Myocardial infarction(心筋梗塞)、Osteomyelitis(骨髄炎)、Renal failure(腎不全)、Yttrium poisoning(イットリウム中毒)<br>
+            そして全てのカルテの一番下には、「被験体001、行動全統制化投与薬、ActusReg-X-001を投与。薬品室での厳重保管対象のため、迅速に返却。」とあった。</p>
+
+             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
               <figure class="image__container">
@@ -265,4 +269,5 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
