--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
             </p>
             <p class="text-center">カルテは全部で6人分。それぞれの病名の下に赤いマーカーがひいてあった。<br>
             Meningitis(髄膜炎),Encephalitis(脳炎),Myocardial infarction(心筋梗塞),Osteomyelitis(骨髄炎),Renal failure(腎不全),Yttrium poisoning(イットリウム中毒)<br>
-            また、一枚のカルテの最後に、「被験体001,行動全統制化投与薬ActusReg-X-001を投与。薬品室での厳重保管対象のため迅速に返却。」と。</p>
+            そしてあるカルテの一番下には、「被験体001,行動全統制化投与薬ActusReg-X-001を投与。薬品室での厳重保管対象のため迅速に返却。」とあった。</p>
 
              <p class="text-center">パソコンのパスワードを解除し、情報を得なければならない。</p>
   
@@ -269,6 +269,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
