--- a/main.html
+++ b/main.html
@@ -93,10 +93,10 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">＊＊＊＊＊＊＊＊＊<br>
-                ＊＊＊＊＊＊＊＊＊<br>
-                ＊＊＊＊＊＊＊＊＊</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ホワイトボードに書かれている謎を解け！</h2>
+              <p class="text-center">テスト<br>
+                テスト<br>
+                テスト</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -269,6 +269,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
