--- a/main.html
+++ b/main.html
@@ -94,9 +94,11 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ホワイトボードに書かれている謎を解け！</h2>
-              <p class="text-center">テスト<br>
+              <p class="text-center">以下の四角に入る感じは？<br>
+                ◻︎◻︎◻︎<br>
                 テスト<br>
-                テスト</p>
+                ↑<br>
+                「するゎえすて」</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -269,6 +271,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
