--- a/main.html
+++ b/main.html
@@ -94,9 +94,8 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ホワイトボードに書かれている謎を解け！</h2>
-              <p class="text-center">以下の四角に入る感じは？<br>
+              <p class="text-center">以下の四角に入る漢字は？<br>
                 ◻︎◻︎◻︎<br>
-                テスト<br>
                 ↑<br>
                 「するゎえすて」</p>
             </div>
@@ -271,6 +270,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
