--- a/main.html
+++ b/main.html
@@ -95,9 +95,9 @@ Youtube貼り付けここまで -->
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ホワイトボードに書かれている謎を解け！</h2>
               <p class="text-center">以下の四角に入る漢字は？<br>
-                ◻︎◻︎◻︎<br>
-                ↑<br>
-                「するゎえすて」</p>
+                ◻︎◻︎◻︎　　　　    🍓<br>
+                ↑　　　　　　  ↑<br>
+                「するゎえすて」　「うつざ」</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -270,6 +270,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
