--- a/main.html
+++ b/main.html
@@ -71,9 +71,9 @@ Youtube貼り付けここまで -->
         <section v-if="clear['stage1']" v-bind:class="{isClear:clear['stage1']}"  class="section section--clear bg-color--gray">
           <div class="container">
             <div class="clear-message">
-              <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">＊＊＊＊＊＊＊＊＊<br>
-                ＊＊＊＊＊＊＊＊＊<br>
+              <div class="clear-message__title">STAGE：１ パスワード突破</div>
+              <div class="clear-message__content">ロックを解除して写った画面には、一枚の報告書が開かれていた。<br>
+                「」<br>
                 ＊＊＊＊＊＊＊＊＊</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
@@ -270,6 +270,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
