--- a/main.html
+++ b/main.html
@@ -74,7 +74,13 @@ Youtube貼り付けここまで -->
               <div class="clear-message__title">STAGE：１ パスワード突破</div>
               <div class="clear-message__content">ロックを解除して写った画面には、一枚の報告書が開かれていた。<br>
                 「行動全統制化投与薬ActusReg-X-001を使用した精神操作計画...?」<br>
-                報告書には、行動全統制化投与薬ActusReg-X-001という薬には患者の精神を操る作用があること、そしてこの病院の院長がそれを悪用して患者を自らの傀儡人形にしようとしていることがわかった。</div>
+                報告書には、行動全統制化投与薬ActusReg-X-001という薬には患者の精神を操る作用があること、そしてこの病院の院長がそれを使用して、患者を自らの傀儡人形にしようとしていることがわかった。
+
+                <p class="text-center">そんな計画に息を呑んだその瞬間、パソコンに通知音がなった。</p>
+
+                 <p class="text-center"></p>
+                
+              </div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -270,6 +276,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
