--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
             Meningitis(髄膜炎),Encephalitis(脳炎),Myocardial infarction(心筋梗塞),Osteomyelitis(骨髄炎),Renal failure(腎不全),Yttrium poisoning(イットリウム中毒)<br>
             そしてあるカルテの一番下には、「被験体001,行動全統制化投与薬ActusReg-X-001を投与。薬品室での厳重保管対象のため迅速に返却。」とあった。</p>
 
-             <p class="text-center">パソコンのパスワードを解除し、情報を得なければならない。</p>
+             <p class="text-center">計画に息を呑んだその瞬間、</p>
   
             <div class="container">
               <figure class="image__container">
@@ -276,6 +276,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
