--- a/main.html
+++ b/main.html
@@ -78,9 +78,9 @@ Youtube貼り付けここまで -->
                 「行動全統制化投与薬ActusReg-X-001を使用した精神操作計画...?」<br>
                 報告書には、行動全統制化投与薬ActusReg-X-001という薬には患者の精神を操る作用があること、そしてこの病院の院長がそれを使用して、患者を自らの傀儡人形にしようとしていることがわかった。
 
-                <p class="text-center">そんな計画に息を呑んだその瞬間、パソコンに通知音がなった。</p>
+                <p class="text-center">そんな計画に息を呑んだその瞬間、パソコンの通知音が鳴った。</p>
 
-                 <p class="text-center"></p>
+                 <p class="text-center">内容はただ一言。「薬品室へ行け。」</p>
                 
               </div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
@@ -278,6 +278,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
