--- a/hint1.html
+++ b/hint1.html
@@ -15,9 +15,9 @@
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
-          <h2 class="section-title--border">ヒント集</h2>
-          <p class="text-center">ちょっと難しかったですか？<br>
-            謎のヒントと答えは下記から確認できます。</p>
+          <h2 class="section-title--border">カルテのそばに紙切れを見つけた。</h2>
+          <p class="text-center">風化した古い紙に文字が書いてあった。<br>
+            どうやらパスワードの手掛かりになりそうだ。</p>
         </div>
       </div>
     </section>
@@ -28,14 +28,21 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">動画を最後までみてみよう！</p>
+              <h3 class="card__title">手掛かり１<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
+              <p class="card__content">パスワードは六文字のアルファベットである。</p>
+
+               <h3 class="card__title">手掛かり２<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
+              <p class="card__content">病名をよく見ろ。</p>
+
+               <h3 class="card__title">手掛かり３<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
+              <p class="card__content">頭文字をつなげろ。</p>
+              
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">あああ</p>
+              <h3 class="card__title">紙切れの裏に掠れた文字で何か書いてある。<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
+              <p class="card__content">パスワードは「MEMORY」。</p>
             </div>
           </div>
         </div>
@@ -50,4 +57,5 @@
   </footer>
   <script src="assets/js/hint.js"></script>
 </body>
+
 </html>
