--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">注意点1（チームで編集）</h3>
-              <p class="card__content">＊＊＊＊＊＊＊＊＊＊＊＊＊</p>
+              <p class="card__content">調べずに自分の力で解いてみよう</p>
             </div>
           </div>
           <div class="column">
@@ -85,6 +85,7 @@
 </body>
 
 </html>
+
 
 
 
