--- a/hint2.html
+++ b/hint2.html
@@ -29,13 +29,13 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">動画を最後までみてみよう！</p>
+              <p class="card__content">文字を一つずらす</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">あああ</p>
+              <p class="card__content">資料室</p>
             </div>
           </div>
         </div>
@@ -50,4 +50,5 @@
   </footer>
   <script src="assets/js/hint.js"></script>
 </body>
+
 </html>
