--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
-        <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
+        <h2 class="section-title section-title--keycolor section-title--story">プロローグ</h2>
         <div class="story">
-          <p class="text-center">まさかのまさかの警報発令？こんなに晴れているのに？？？<br>
-            したかなく、オンライン授業を受けようと自宅からSlackチャンネルにあるメンターが投げているURLをクリックしたあなた。<br>
-            しかし、今日は何かが違う。<br>
+          <p class="text-center">目覚めるとそこは、廃れた病院のベッドの上だった。<br>
+            病衣を纏うほか何も持たず、自らのことも不明瞭な中混濁した記憶を辿るものの、やはり何もわからない。<br>
+            ふと、枕元に一枚のメモが落ちているのが目に入った。<br>
             <br>
-            ——開いたのはZoomではなく、1つの謎のサイト。<br>
+            ——受付へ行け。<br>
             <br>
-            次の瞬間、画面いっぱいに謎のメッセージが表示される。<br>
-            「この世界の謎をすべて解いた者だけが、現実に戻ることができる。」<br>
+            その誘うかのような言葉に恐怖を覚えつつ、好奇心は止められない。<br>
+            メモを捨て迷わず足を進める。<br>
             <br>
-            9:30まであと少しこんなことで遅刻になるなんて嫌すぎる！<br>
-            早く謎を解いて本来のキャンパスZoomに戻らねば！</p>
+            捨てられたメモは裏側を露呈させ静かに床へ落ちた。<br>
+            「もう少しで君も——」<br>
+            そんなことには目もくれず君は病室を後にした。</p>
         </div>
       </div>
     </section>
@@ -85,6 +86,7 @@
 </body>
 
 </html>
+
 
 
 
