--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">注意点1（チームで編集）</h3>
-              <p class="card__content">調べずに自分の力で解いてみよう</p>
+              <p class="card__content">わかんなかったらヒントを見てね！！！</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
               <h3 class="card__title">注意点2(チームで編集)</h3>
-              <p class="card__content">＊＊＊＊＊＊＊＊＊＊＊＊＊</p>
+              <p class="card__content">至らぬところもありますがそこはあたたたたたたたたか〜い目で見てね🥺</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
               <h3 class="card__title">ブラウザのCookieとキャッシュを<br>削除しよう！</h3>
-              <p class="card__content">エラーが起きる原因となる恐れがありますので、必ずCookieとキャッシュを削除してからプレイを開始するようにしてください。</p>
+              <p class="card__content">エラーが起きる原因となる恐れがありますので、必ずCookieとキャッシュを削除してからプレイを開始するようにしてください。だそうです。</p>
             </div>
           </div>
         </div>
@@ -86,6 +86,7 @@
 </body>
 
 </html>
+
 
 
 
