--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
     <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">準備OK？では、ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main.html">物思いに耽っているうちに、受付に到着したようだ。<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
@@ -86,6 +86,7 @@
 </body>
 
 </html>
+
 
 
 
