--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">注意点1（チームで編集）</h3>
+              <h3 class="card__title">注意点1</h3>
               <p class="card__content">わかんなかったらヒントを見てね！！！</p>
             </div>
           </div>
           
           <div class="column">
             <div class="card">
-              <h3 class="card__title">注意点2(チームで編集)</h3>
+              <h3 class="card__title">注意点2</h3>
               <p class="card__content">至らぬところもありますがそこはあたたたたたたたたか〜い目で見てね🥺</p>
             </div>
           </div>
@@ -87,6 +87,7 @@
 </body>
 
 </html>
+
 
 
 
