--- a/main.html
+++ b/main.html
@@ -177,8 +177,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">問題を解くと「資料室」と出てきた<br>
-                現時点での手がかりは「資料室」しかない、とりあえず行ってみるか。</div>
+              <div class="clear-message__content">問題を解くと「資料室」と出てきた。<br>
+                現時点で思い当たる次の行き先は資料室しか思い当たらない。とりあえず行ってみるか。</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -278,6 +278,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
