--- a/main.html
+++ b/main.html
@@ -273,10 +273,10 @@ STAGE3-3追加　ここまで -->
         <section v-if="clear['stage2']" v-bind:class="{isClear:clear['stage3']}"  class="section section--clear bg-color--gray">
           <div class="container">
             <div class="clear-message">
-              <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">問題を解くと「資料室」と出てきた。<br>
-                現時点で思い当たる次の行き先は資料室しか思い当たらない。とりあえず行ってみるか。</div>
-                <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
+              <div class="clear-message__title">STAGE：３突破</div>
+              <div class="clear-message__content">ようやく出入り口のロックを解除し、外への扉が開いた。<br>
+                そして、逃げるように病院を後にした。</div>
+                <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">締めへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
         </section>
@@ -295,6 +295,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
