--- a/main.html
+++ b/main.html
@@ -193,7 +193,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>＊＊＊＊＊＊＊＊＊</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>四桁式のダイヤルロックを開けろ</h2>
             <p class="text-center">＊＊＊＊＊＊＊＊＊<br>
               ＊＊＊＊＊＊＊＊＊<br>
               ＊＊＊＊＊＊＊＊＊</p>
@@ -295,6 +295,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
