--- a/final.html
+++ b/final.html
@@ -13,8 +13,8 @@
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">＊＊＊＊＊＊＊＊＊＊<br>
-            ＊＊＊＊＊＊＊＊＊＊</p>
+          <p class="text-center">おめでとうございます。貴方は無事、脱出することができたようですね。<br>
+            またのご来院お待ちしております。</p>
         </div>
       </div>
     </section>
@@ -27,7 +27,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">チームのこだわりポイント</h3>
-              <p class="card__content">＊＊＊＊＊＊＊＊＊＊＊＊</p>
+              <p class="card__content">チーム全員で考えた凝ったストーリーと</p>
             </div>
           </div>
           <div class="column">
@@ -48,4 +48,5 @@
     </div>
   </footer>
 </body>
+
 </html>
