--- a/final.html
+++ b/final.html
@@ -27,15 +27,15 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">チームのこだわりポイント</h3>
-              <p class="card__content">チーム全員で考えた凝ったストーリーと</p>
+              <p class="card__content">『チーム全員で考えた凝ったストーリーとメンバー一人一人が考えた謎』</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
-              <p class="card__content">＊＊＊＊＊＊＊＊＊＊＊＊<br>
-                ＊＊＊＊＊＊＊＊＊＊<br>
-                ＊＊＊＊＊＊＊＊＊＊</p>
+              <p class="card__content">チームかき氷<br>
+                福山小羽瑠・原杏輔・國生隼矢<br>
+                藤田龍楼・土井奏來</p>
             </div>
           </div>
         </div>
@@ -50,3 +50,4 @@
 </body>
 
 </html>
+
