--- a/main.html
+++ b/main.html
@@ -193,7 +193,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>　　　4桁のダイヤルロックがかかった箱を開けろを開けろ</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>　　　4桁のダイヤルロックがかかった箱を開けろ</h2>
             <p class="text-center">四桁のダイヤル式ロックに入る数字は何だ<br>
               BACA　◻︎1◻︎1<br>
               ◻︎に入る数字を考えろ</p>
@@ -295,6 +295,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
