--- a/main.html
+++ b/main.html
@@ -195,7 +195,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>　　　4桁のダイヤルロックがかかった箱を開けろ</h2>
             <p class="text-center">机の上に四桁のダイヤルロックがかかった箱がある。おそらくこの中に鍵があると思われる。<br>
-              BACA　◻︎1◻︎1<br>
+              問題　BACA　◻︎1◻︎1<br>
               ◻︎に入る数字を考えろ</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
@@ -295,6 +295,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
