--- a/main.html
+++ b/main.html
@@ -194,7 +194,7 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>　　　4桁のダイヤルロックがかかった箱を開けろ</h2>
-            <p class="text-center">机の上に四桁のダイヤルロックがかかった箱がある。おそらくこの中に鍵があると思われる。<br>
+            <p class="text-center">机の上に四桁のダイヤルロックがかかった箱がある。おそらくこの箱の中に何かがあると思われる。<br>
               問題　BACA　◻︎1◻︎1<br>
               ◻︎に入る数字を考えろ</p>
             <figure class="image__container">
@@ -295,6 +295,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
