--- a/main.html
+++ b/main.html
@@ -276,7 +276,7 @@ STAGE3-3追加　ここまで -->
               <div class="clear-message__title">STAGE：３突破</div>
               <div class="clear-message__content">ようやく出入り口のロックを解除し、外への扉が開いた。<br>
                 そして、逃げるように病院を後にした。</div>
-                <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn" a class="btn" href="main.html">[締めへ](./final.html)<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
+                <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn" a class="btn" href="final.html">[締めへ]<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
         </section>
@@ -295,6 +295,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
