--- a/main.html
+++ b/main.html
@@ -10,27 +10,57 @@
 </head>
 <body>
       <!-- STAGE1　ここから -->
-      <div id="sectionStage1" class="stage">
+<div id="sectionStage1" class="stage">
 
-        <!-- STAGE1問題セクション　ここから -->
-        <section class="section">
-          <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>カウンターに辿り着く。</h2>
-            <p class="text-center">カウンターの上には、いくつかのカルテと電源の入ったパソコンがある。<br>
-              パソコンには「パスワードを入力せよ、答えはカルテの中に」とかいてあった。<br>
-            </p>
-            <p class="text-center">カルテは全部で6人分。それぞれの病名の下に赤いマーカーがひいてあった。<br>
-            Meningitis(髄膜炎),Encephalitis(脳炎),Myocardial infarction(心筋梗塞),Osteomyelitis(骨髄炎),Renal failure(腎不全),Yttrium poisoning(イットリウム中毒)<br>
-            そしてあるカルテの一番下には、「被験体001,行動全統制化投与薬ActusReg-X-001を投与。薬品室での厳重保管対象のため迅速に返却。」とあった。</p>
+  <!-- STAGE1問題セクション　ここから -->
+  <section class="section">
+    <div class="container">
+      <h2 class="section-title section-title--keycolorlight">
+        <span class="section-title__stage">STAGE：1</span>カウンターに辿り着く。
+      </h2>
+      <p class="text-center">
+        カウンターの上には、いくつかのカルテと電源の入ったパソコンがある。<br>
+        パソコンには「パスワードを入力せよ、答えはカルテの中に」とかいてあった。<br>
+      </p>
+      <p class="text-center">
+        カルテは全部で6人分。それぞれの病名の下に赤いマーカーがひいてあった。<br>
+        Meningitis(髄膜炎), Encephalitis(脳炎), Myocardial infarction(心筋梗塞),
+        Osteomyelitis(骨髄炎), Renal failure(腎不全), Yttrium poisoning(イットリウム中毒)<br>
+        そしてあるカルテの一番下には、「被験体001, 行動全統制化投与薬 ActusReg-X-001 を投与。
+        薬品室での厳重保管対象のため迅速に返却。」とあった。
+      </p>
 
-             <p class="text-center">計画に息を呑んだその瞬間、パソコンから通知音が鳴った。</p>
+      <!-- 🔽 ここに解答欄を追加 -->
+      <div class="answer-box text-center" style="margin:20px 0;">
+        <label for="stage1-answer">パスワード：</label>
+        <input type="text" id="stage1-answer" placeholder="ここに入力" style="padding:5px;">
+        <button onclick="checkStage1()">送信</button>
+        <p id="stage1-result"></p>
+      </div>
+      <!-- 🔼 ここまで解答欄 -->
 
-             <p class="text-center">通知の内容はただ一言。「薬品室でへ行け。」</p>
-  
-            <div class="container">
-              <figure class="image__container">
-                <img src="assets/images/stage.png" alt="">
-              </figure>
+      <p class="text-center">計画に息を呑んだその瞬間、パソコンから通知音が鳴った。</p>
+      <p class="text-center">通知の内容はただ一言。「薬品室でへ行け。」</p>
+
+      <div class="container">
+        <figure class="image__container">
+          <img src="assets/images/stage.png" alt="">
+        </figure>
+      </div>
+    </div>
+  </section>
+</div>
+
+<script>
+  function checkStage1() {
+    const ans = document.getElementById("stage1-answer").value.trim();
+    if (ans.toLowerCase() === "actusreg-x-001") {
+      document.getElementById("stage1-result").innerText = "薬品室へ進め。";
+    } else {
+      document.getElementById("stage1-result").innerText = "❌ 不正解。カルテをもう一度確認せよ。";
+    }
+  }
+</script>
                 
  <!--  YouTube貼り付け
               <div class="youtube__container">
@@ -295,6 +325,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
