--- a/main.html
+++ b/main.html
@@ -306,7 +306,7 @@ STAGE3-3追加　ここまで -->
               <div class="clear-message__title">STAGE：３突破</div>
               <div class="clear-message__content">ようやく出入り口のロックを解除し、外への扉が開いた。<br>
                 そして、逃げるように病院を後にした。</div>
-                <button a class="link-hint" href="hint1.html" target="hint1" class="clear-message__btn btn">締めへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
+                 <a class="link-hint" href="hint1.html" target="hint1">終わり ></a>
             </div>
           </div>
         </section>
@@ -325,6 +325,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
