--- a/main.html
+++ b/main.html
@@ -306,7 +306,7 @@ STAGE3-3追加　ここまで -->
               <div class="clear-message__title">STAGE：３突破</div>
               <div class="clear-message__content">ようやく出入り口のロックを解除し、外への扉が開いた。<br>
                 そして、逃げるように病院を後にした。</div>
-                 <a class="link-hint" href="hint1.html" target="hint1">終わり ></a>
+                 <a class="link-final" href="final.html" target="final">終わり ></a>
             </div>
           </div>
         </section>
