--- a/main.html
+++ b/main.html
@@ -131,7 +131,7 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ホワイトボードに書かれている謎を解け！</h2>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>薬品室についた。そこにある。ホワイトボードに書かれている謎を解け。</h2>
               <p class="text-center">以下の四角に入る漢字は？<br>
                 ◻︎◻︎◻︎　　　　    🍓<br>
                  ↑　　　　　　  ↑<br>
@@ -325,6 +325,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
