--- a/main.html
+++ b/main.html
@@ -126,44 +126,57 @@ Youtube貼り付けここまで -->
         クリア画面の「次のステージへ」ボタンをクリックしたら表示します。
         v-if="next['stage1']"はnext['stage1']がtrueになったら表示します。
       ----------------------------------------------------------------------->
-      <div v-if="next['stage1']" id="sectionStage2" class="stage">
-        <section>
-          <div class="section">
-            <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>薬品室についた。そこにある。ホワイトボードに書かれている謎を解け。</h2>
-              <p class="text-center">以下の四角に入る漢字は？<br>
-                ◻︎◻︎◻︎　　　　    🍓<br>
-                 ↑　　　　　　  ↑<br>
-                「するゎえすて」　「うつざ」</p>
-            </div>
-          </div>
-          <div class="stage-column__container section bg-color--keycolor">
-            <div class="container">
-              <h2 class="section-title"><span class="section-title__stage">STAGE：2</span>キーワードを入力</h2>
-              <!-------------------------------------------------------------
-                class名"row"内のclass名"column"が横並びになります。
-                改行する場合は以下のように追加してください。
-                <div class="row">
-                  <div class="column">
-                    ～ 内容 ～
-                  </div>
-                </div>
-              ------------------------------------------------------------->
-              <div class="row">
+    <div id="sectionStage2" class="stage" style="display:none;">
+  <section>
+    <div class="section">
+      <div class="container">
+        <h2 class="section-title section-title--keycolorlight">
+          <span class="section-title__stage">STAGE：2</span>薬品室についた。そこにある。ホワイトボードに書かれている謎を解け。
+        </h2>
+        <p class="text-center">
+          以下の四角に入る漢字は？<br>
+          ◻︎◻︎◻︎　　　　 🍓<br>
+          ↑　　　　　　 ↑<br>
+          「するゎえすて」　「うつざ」
+        </p>
 
-                <!-- STAGE2-1　ここから -->
-                <div class="column">
-                  <!-- STAGE2-1問題セクション　ここから -->
-                  <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
-                  </figure>
-                  <!-- STAGE2-1問題セクション　ここまで -->
-                  <!-- STAGE2-1解答入力セクション　ここから -->
-                  <answer-input v-bind:correct="correctAnswer['stage2']['q1']" v-on:answer-input="answerInput($event, 'stage2', 1)"></answer-input>
-                  <a class="link-hint" href="hint2.html" target="hint2">ヒントをみる ></a>
-                  <!-- STAGE2-1解答入力セクション　ここまで -->
-                </div><!-- /.column -->
-                <!-- STAGE2-1　ここまで -->
+        <!-- 🔽 解答欄 -->
+        <div class="answer-box text-center" style="margin:20px 0;">
+          <label for="stage2-answer">答え：</label>
+          <input type="text" id="stage2-answer" placeholder="ここに入力" style="padding:5px;">
+          <button onclick="checkStage2()">送信</button>
+          <p id="stage2-result"></p>
+        </div>
+        <!-- 🔼 解答欄 -->
+
+      </div>
+    </div>
+  </section>
+</div>
+
+<script>
+  // STAGE1 が終わったら表示する場合の例
+  function showStage2() {
+    document.getElementById('sectionStage2').style.display = 'block';
+  }
+
+  function checkStage2() {
+    const ans = document.getElementById("stage2-answer").value.trim();
+    const result = document.getElementById("stage2-result");
+
+    if(ans === "資料室") {
+      result.textContent = "✅ 正解！次のステージへ進め。";
+      result.style.color = "green";
+      // ここで次のステージを表示する処理も追加できる
+    } else {
+      result.textContent = "❌ 不正解です。もう一度考えてみてください。";
+      result.style.color = "red";
+    }
+  }
+
+  // 例: ページ読み込み時に STAGE2 を表示する場合
+  // showStage2();
+</script>
 
 <!-- STAGE2-2 を追加
 
@@ -324,6 +337,7 @@ STAGE3-3追加　ここまで -->
 </body>
 
 </html>
+
 
 
 
